performed an overall rerun, check and update of the project.

--- a/source/Data-Analysis-01.ipynb
+++ b/source/Data-Analysis-01.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "id": "06ec2db2",
    "metadata": {},
    "outputs": [],
@@ -449,6 +449,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff848338",
+   "metadata": {},
+   "source": [
+    "算法数学表达式：sentiment_score = ∑(score * ∏(degree_dict[degree_word])) * (-1)^(neg_count)\n",
+    "\n",
+    "其中：\n",
+    "1. score 是情感词在 sentiment_dict 中对应的得分。\n",
+    "2. ∏(degree_dict[degree_word]) 表示句子中有效距离内所有程度词在 degree_dict 中对应得分的乘积。\n",
+    "3. neg_count 是句子中出现的否定词的个数。\n",
+    "4. (-1)^(neg_count) 表示根据否定词的个数来决定是否将情感值取反，当 neg_count 为偶数时，取反结果为正数，当 neg_count 为奇数时，取反结果为负数。\n",
+    "5. 有效距离是指在当前情感词之前的最后三个单词内的程度词。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "248bc12f",
@@ -538,27 +553,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7c3dcbaa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.02\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Testing a typical negative comment\n",
-    "sen = '商场 整体 环境 还 行 有点 闷 月份 很 热 吃 饭 热 不行'\n",
-    "score = sentiment_score(sen)\n",
-    "print(score)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "af606120",
    "metadata": {},
@@ -568,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "961c815e",
    "metadata": {},
    "outputs": [],
@@ -611,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f128964e",
    "metadata": {},
    "outputs": [],
@@ -664,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "3113c081",
    "metadata": {},
    "outputs": [],
@@ -682,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "id": "1321eb93",
    "metadata": {},
    "outputs": [],
@@ -717,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 15,
    "id": "74b8fbcf",
    "metadata": {},
    "outputs": [],
@@ -740,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "a268c2a4",
    "metadata": {},
    "outputs": [],
@@ -762,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 17,
    "id": "5c8584f8",
    "metadata": {},
    "outputs": [],
@@ -804,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "15b00d31",
    "metadata": {
     "scrolled": true
@@ -831,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "9ff5ac6f",
    "metadata": {},
    "outputs": [
@@ -862,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "id": "7830e95f",
    "metadata": {},
    "outputs": [],
@@ -881,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "id": "3b95b731",
    "metadata": {
     "scrolled": false
@@ -937,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "857b3178",
    "metadata": {},
    "outputs": [
@@ -950,7 +944,7 @@
        "Name: polarity, dtype: int64"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -969,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 23,
    "id": "a73e0ae8",
    "metadata": {},
    "outputs": [
@@ -1001,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 24,
    "id": "481ac315",
    "metadata": {
     "scrolled": false
@@ -1026,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "id": "59e15304",
    "metadata": {},
    "outputs": [],
@@ -1057,8 +1051,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "f40085d7",
+   "execution_count": 26,
+   "id": "5e395203",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "id": "d0d48067",
    "metadata": {},
    "outputs": [],
