--- a/source/Data-Analysis-02.ipynb
+++ b/source/Data-Analysis-02.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "7cc87f80",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "# Create a list of integers for the range of number of topics.\n",
-    "num_topics_range = list(range(3, 10))"
+    "num_topics_range = list(range(3, 20))"
    ]
   },
   {
@@ -177,9 +177,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 8\n",
+      "Optimal number of topics (using perplexity method): 18\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 5\n"
+      "Ultimate optimal number of topics : 10\n"
      ]
     }
    ],
@@ -206,9 +206,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 4\n",
+      "Optimal number of topics (using perplexity method): 12\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 3\n"
+      "Ultimate optimal number of topics : 7\n"
      ]
     }
    ],
@@ -243,9 +243,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 8\n",
+      "Optimal number of topics (using perplexity method): 16\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 5\n"
+      "Ultimate optimal number of topics : 9\n"
      ]
     }
    ],
@@ -272,9 +272,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 6\n",
+      "Optimal number of topics (using perplexity method): 14\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 4\n"
+      "Ultimate optimal number of topics : 8\n"
      ]
     }
    ],
@@ -338,9 +338,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 9\n",
+      "Optimal number of topics (using perplexity method): 17\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 6\n"
+      "Ultimate optimal number of topics : 10\n"
      ]
     }
    ],
@@ -375,9 +375,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 8\n",
+      "Optimal number of topics (using perplexity method): 4\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 5\n"
+      "Ultimate optimal number of topics : 3\n"
      ]
     }
    ],
@@ -406,9 +406,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 6\n",
+      "Optimal number of topics (using perplexity method): 19\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 4\n"
+      "Ultimate optimal number of topics : 11\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "bd7c5500",
    "metadata": {},
    "outputs": [],
@@ -527,12 +527,17 @@
      "output_type": "stream",
      "text": [
       "Dictionary<15034 unique tokens: ['apm', '一圈', '一家', '不错', '云集']...>\n",
-      "Dictionary<3103 unique tokens: ['apm', '一圈', '一家', '不错', '云集']...>\n",
-      "Topic 0: 不, 没, 走, 没有, 新东安, 打折, 装修, 消费, 更, 品牌\n",
-      "Topic 1: 活动, 可爱, 拍照, 展览, 小样, 游戏, 兰蔻, 领, 中心, 中庭\n",
-      "Topic 2: 很, 王府井, 逛, 好, 吃, 多, 还, 喜欢, 品牌, 非常\n",
-      "Topic 3: 购物, 品牌, 苹果, 北京, 时尚, 王府井大街, 步行街, 店, 美食, 餐饮\n",
-      "Topic 4: apm, 北京, 做, 东安市场, 打卡, 朋友, 正好, 好看, 好去处, 超级\n",
+      "Dictionary<3069 unique tokens: ['一圈', '一家', '云集', '交通', '人气']...>\n",
+      "Topic 0: 一家, 新, 东安市场, 期间, 想, 装修, 老, 新东安, 打折, 门口, 电影院, 进门, 少, 卖, 灯光, 价格, 有点, 有些, 玩具, 牌子\n",
+      "Topic 1: 正好, 地下, 那么, 两层, 升级, 五六层, 哈哈哈, 商城, 店面, 中心, 风格, 停车场, 首饰, 菜, 鞋子, 互动, 口罩, 改造, 装饰, 好久\n",
+      "Topic 2: 超级, 发现, 说, 拍照, 太, 好看, 完, 来到, 点, 开, 电影, 外面, 出门, 好多, 逛商场, 家, 开门, 领, 高大, 心动\n",
+      "Topic 3: 朋友, 好去处, 爱, 全, 适合, 外婆家, 泡泡玛特, 展览, 可爱, 赶上, 主题, 宝宝, 小样, 拍, 游戏, 算, 海绵, 过年, 中庭, 约\n",
+      "Topic 4: 一些, 做, 东西, 停车, 干净, 没, 希望, 好像, 消毒, 走, 找, 前, 电梯, 旁边, 营业, 过, 楼下, 扫码, 开业, 第一次\n",
+      "Topic 5: ️, 娱乐, 布局, 会员, 休闲, 集, 游客, 一体, 宽敞, 必, 导航, 年轻化, 入驻, ⃣, 力度, 商业区, 洗手间, 地处, 溜, 一体化\n",
+      "Topic 6: 店铺, 餐饮, 苹果, 步行街, 美食, 楼上, 衣服, 餐厅, 很大, 大牌, 不少, 排队, 不是, 体验, 一楼, 好吃, 不过, 服务, 每次, 齐全\n",
+      "Topic 7: 王府井大街, 时尚, 位置, 年轻人, 整体, 位于, 年轻, 吸引, 更, 消费, 可, 设计, 地铁, 走, 购物中心, 豆, 晚上, pm, 时间, 热闹\n",
+      "Topic 8: 高端, 新东安市场, 大气, 各类, 商品, 东来顺, 遛弯儿, 吃完饭, 上档次, 明亮, 休息, 全新, 几层, 优雅, 一线, 情况, 鞋, OK, 印象, 氛围\n",
+      "Topic 9: 玩, 中, 没, 带, 孩子, 折扣, 点评, 开心, 楼层, 娃娃, 免费, 顾客, 工作人员, 空间, 盲盒, 券, 机, 商铺, 顺便, 抓\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_1_polarity_P.html\n"
      ]
     }
@@ -561,10 +566,14 @@
      "output_type": "stream",
      "text": [
       "Dictionary<5557 unique tokens: ['休息', '地方', '坐下', '座位', '想']...>\n",
-      "Dictionary<715 unique tokens: ['休息', '地方', '想', '没有', '顾客']...>\n",
-      "Topic 0: 商场, 王府井, 品牌, 很, apm, 北京, 一些, 一层, 逛, 东安市场\n",
-      "Topic 1: 活动, apm, 打卡, 拍照, ️, 北京, 展览, 月, 时间, 玩\n",
-      "Topic 2: 不, 还, 没, 多, 买, 没有, 挺, 说, 逛, 疫情\n",
+      "Dictionary<686 unique tokens: ['休息', '想', '顾客', '不像', '不错']...>\n",
+      "Topic 0: 打折, 折扣, 划算, 年, 折, 一楼, 有个, 对面, 听说, 穿, 二层, 关门, 喜欢, 商户, 小样, 样机, 原因, 肉, 那种, 盲盒\n",
+      "Topic 1: 排队, 周末, 地下, 好多, 新东安, 里, 苹果, 走, 停车, 逛街, 停车场, 体验, 找, 朋友, 价格, 过, 开门, 那么, 发现, 位于\n",
+      "Topic 2: APM, 不错, 有点, 特别, 开, 溜达, 不少, 衣服, 每次, 服务, 希望, 中, 顾客, 一圈, 不过, 搞, 逛逛, 适合, 没什么, 王府井大街\n",
+      "Topic 3: 打卡, ️, 点评, 展览, 展, 拍照, 中庭, 月, 皮克斯, 电影院, 不会, 熊, 好看, 二楼, 区域, 失望, B, 快闪店, 草莓, 六层\n",
+      "Topic 4: 力度, 带, 里, 豆, 小朋友, 特意, 领, 朋友, 可爱, 晚上, 可, 百货大楼, 回忆, 不如, 一点, 老牌, 形象, 产品, 服务台, 想\n",
+      "Topic 5: 东安市场, 装修, 餐厅, 好像, 闭店, 楼上, 衣服, 美食, 一些, 牌子, 有些, 很大, 不过, 撤店, 兰蔻, 很少, 人气, 开业, 吃喝玩乐, 老\n",
+      "Topic 6: 店铺, 非常, 一些, 步行街, 层, 餐饮, 营业, 影响, 化妆品, 做, 改造, 店员, 工作人员, 设计, 完全, 算是, 设施, 好久没, 商品, 一楼\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_1_polarity_N.html\n"
      ]
     }
@@ -601,12 +610,16 @@
      "output_type": "stream",
      "text": [
       "Dictionary<13572 unique tokens: ['cafelandmark', '一共', '一块', '一杯', '万朵']...>\n",
-      "Dictionary<2515 unique tokens: ['一共', '一块', '一杯', '万朵', '上班']...>\n",
-      "Topic 0: 很, 好, 商场, 喜欢, 非常, 特别, 环境, 可爱, 最, 里\n",
-      "Topic 1: 商场, 王府井, 品牌, 王府中环, 高端, 餐厅, 大牌, 环境, 不错, 购物\n",
-      "Topic 2: 很, 还, 不, 多, 吃, 王府中环, 买, 适合, 好, 拍照\n",
-      "Topic 3: 怪兽, 孩子, 带, 积分, 圣诞, 展览, 有趣, 玩, 兑换, 装饰\n",
-      "Topic 4: 可可, 咖啡, ️, 互动, 制作, 文化, 活动, 一群, 举办, 创意\n",
+      "Dictionary<2483 unique tokens: ['一共', '一块', '一杯', '万朵', '上班']...>\n",
+      "Topic 0: 怪兽, 可爱, 可可, 孩子, 活动, 巧克力, 主题, 展, 超级, 圣诞, ️, 做, 装饰, 好多, 新年, 奇趣, 气氛, 元旦, 发现, 互动\n",
+      "Topic 1: 疫情, 云集, 一家, 朋友, 好吃, 不少, 推荐, 走, 体验, 排队, 更, 过, 高档, 这家, 兑换, 溜达, 节日, 期间, 位于, 价格\n",
+      "Topic 2: 拍照, 展览, 停车场, 有趣, 好看, 拍, 艺术, 值得, 进门, 故宫, 定位, 人气, 高级, 西座, 不用, 装置, 场景, 地下, 照片, 唯一\n",
+      "Topic 3: 适合, 一些, 太, 小朋友, 高大, 吸引, 设计, 逛逛, 王府中環, 步行街, 奢侈品, 选择, 美食, 高, 少, 布置, 逛街, 王府井大街, 时尚, 网红\n",
+      "Topic 4: 小时, 乐坊, 文化, 芝, 一线, 创意, 客人, 半个, 众多, 顾客, SKP, 分钟, 每家, 潮流, 总体, 完全, 周边, 面积, 逛一逛, 十足\n",
+      "Topic 5: 挺, 草坪, 蛋糕, 制作, 可, 广场, 没, 点评, 元, 几个, 商城, 室外, 完, 好玩, 工作人员, 周末, 搞, 只能, 一杯, 甜品\n",
+      "Topic 6: 中, 王府, 怪物, 玩偶, 寰, 点, 卡通, 闺蜜, 没什么, 美味, 造型, 言, 合影, 漂亮, 半小时, 奢华, 童趣, 享受, 驻足, 场所\n",
+      "Topic 7: 工厂, 带, 吃饭, 服务, 干净, 积分, 卫生间, 娃, 没, 设施, 东西, 很大, 停车, 不过, 楼上, 人少, 算是, 店铺, 洗手间, 每次\n",
+      "Topic 8: 说, 中环, 爱, 想, 开, 家, 绝对, 圣诞节, 开业, 顺便, 款式, 品质, skp, 找, 豪华, 前, 款, 游客, 面包, 正\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_2_polarity_P.html\n"
      ]
     }
@@ -635,11 +648,15 @@
      "output_type": "stream",
      "text": [
       "Dictionary<3895 unique tokens: ['B', 'DROPOFF', '不是', '东', '位置']...>\n",
-      "Dictionary<395 unique tokens: ['B', '不是', '位置', '停车场', '免费']...>\n",
-      "Topic 0: 工厂, 巧克力, 活动, 怪物, 创意, 怪兽, 圣诞节, 展览, 停车费, skp\n",
-      "Topic 1: 咖啡, 冰场, 票, 喝, 场地, 青年节, 咖啡节, 现场, 户外, 咖啡店\n",
-      "Topic 2: 玩, 买, 孩子, 小朋友, 说, 真的, 地方, 滑冰, 朋友, 走\n",
-      "Topic 3: 商场, 不, 王府中环, 很, 没有, 王府井, 地方, 多, 还, 品牌\n",
+      "Dictionary<363 unique tokens: ['B', '不是', '位置', '停车场', '免费']...>\n",
+      "Topic 0: 牌子, 两个, 香港, 店, 逛街, 不好, 进, 只能, 积分, 服务, 货, 不会, 有个, 过, 不能, 奢侈品, 总体, 建议, 卖, 下次\n",
+      "Topic 1: 适合, 小时, 蛋糕, 二层, 早, 元, 咖啡节, 好多, 这样, 去年, 现场, 乐坊, 芝, 室外, 拍, 第一次, 不少, 点, 水, 分钟\n",
+      "Topic 2: 吃饭, 王府中環, 门口, 装修, 不少, 停车费, 位置, 带, ️, 奢侈, 位于, 购物中心, 大部分, 圣诞, 风格, 车, 步行街, 开门, 顾客, 娃\n",
+      "Topic 3: 工厂, 巧克力, 孩子, 怪兽, 展览, 怪物, 可可, 创意, 朋友, 小朋友, 走, 可惜, 有些, 步行街, 场景, 进门, skp, 还好, 好看, 发现\n",
+      "Topic 4: 特别, 冰场, 娃, 孩子, 喜欢, 卫生间, 带, 设施, 值得, 不过, 做, 购物, 外面, 滑雪, 够, 逛一逛, 打卡, 确实, 路过, 档次\n",
+      "Topic 5: 主题, 展, 一些, 每次, 赶上, 里, 全, 云集, 甜品, 冬天, 硬件, 照片, 相当, 感受, 几张, 应有尽有, 滑冰场, 逛逛, 低, 算是\n",
+      "Topic 6: 滑冰, 圣诞节, 没什么, 吸引, 不过, 店, 世界, 转, 爱, 真心, 想, 商业, 提前, 喝, 四层, 贵, 工作日, 奢华, 好喝, 停车\n",
+      "Topic 7: 停车场, 中环, 非常, 里, 布置, 期间, 高端, 做, 票, 网红, 一些, 有点, 饰品, 蛮, 点评, 风车, 拍照, 打卡, 逛逛, 店铺\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_2_polarity_N.html\n"
      ]
     }
@@ -676,10 +693,10 @@
      "output_type": "stream",
      "text": [
       "Dictionary<8982 unique tokens: ['一楼', '五花八门', '价格', '全国劳模', '北京']...>\n",
-      "Dictionary<1468 unique tokens: ['一楼', '价格', '全国劳模', '北京', '品类']...>\n",
-      "Topic 0: 化妆品, ️, 专柜, 买, 一层, 优惠, 推荐, 好, 羊毛, 薅\n",
-      "Topic 1: 很, 王府井, 商场, 北京, 好, 还, 逛, 感觉, 不错, 不\n",
-      "Topic 2: 老, 北京, 和平, 地下, 菓, 局, 回忆, 北京市, 新, 记忆\n",
+      "Dictionary<1432 unique tokens: ['一楼', '价格', '全国劳模', '品类', '商品']...>\n",
+      "Topic 0: ️, 专柜, 化妆品, 喷泉, 推荐, 优惠, 没, 疫情, 期间, 羊毛, 薅, 门口, 搞, 力度, 活动, 路过, 元, 节日, 吃饭, 雅诗兰黛\n",
+      "Topic 1: 记忆, 带, 吃, 胡同, 年代, 拍照, 过, 有个, 生活, 装修, 逛逛, 想, 开, 有意思, 回到, 感, 穿越, 小卖部, 卖, 适合\n",
+      "Topic 2: 购物, 环境, 店, 张秉贵, 年, 位于, 老牌, 百货, 第一, 全国, 最, 大楼, 王府井百货, 大型, 游客, 建筑, 更, 大牌, 商店, 发展\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_3_polarity_P.html\n"
      ]
     }
@@ -708,13 +725,17 @@
      "output_type": "stream",
      "text": [
       "Dictionary<3461 unique tokens: ['一层', '之选', '优秀', '吃', '商场']...>\n",
-      "Dictionary<343 unique tokens: ['一层', '吃', '商场', '地下', '地方']...>\n",
-      "Topic 0: 商场, 不, 没有, 王府井, 很, 东西, 多, 说, 不是, 真的\n",
-      "Topic 1: 排队, 小样, 领, apm, 挺, 化妆品, 旋转, 木马, 玩, 雅诗兰黛\n",
-      "Topic 2: 带, 很, 小时候, 孩子, 回忆, 玩, 买, 挺, 生活, 感觉\n",
-      "Topic 3: 体验, 负, 可, 自行车, 仿佛, 火车, 零食, 带, 玩, 玩具\n",
-      "Topic 4: 北京, 老, 地下, 王府井, 二层, 一层, 和平, 还, 没, 胡同\n",
-      "Topic 5: 王府井, 儿时, 记忆, 北京, 步行街, 选择, 打卡, 地下, 北楼, 场景\n",
+      "Dictionary<312 unique tokens: ['工作人员', '建议', '时代', '选择', '那种']...>\n",
+      "Topic 0: 步行街, 年, 问, 网红, 下次, 历史, 化妆品, 很大, 变化, 果局, 孩子, 购物中心, 旋转, 木马, 做, 游客, 喷泉, 人气, 打卡, 喜欢\n",
+      "Topic 1: 儿时, 拍照, 记忆, 张秉贵, 过年, 那么, 消费, 过, 北京市, 品牌, 店, 一楼, 装修, 旁边, 几十年, 化妆品, 活动, 位于, 糖果, 前\n",
+      "Topic 2: 火车, 排队, 卖, 满满的, 周末, 王府井大街, 小吃, 玩, 特别, 专柜, 转转, 建议, 王府井百货, 层, 平时, 负, 不好, 机器, 回到, 人多\n",
+      "Topic 3: 不少, 老式, 物件, 门口, 玩, 活动, 顾客, 商店, 印象, 一种, 最, 差, 哈姆雷, 柜台, 超级, 绿皮, 不够, 商城, 美好, 特别\n",
+      "Topic 4: 小样, 样机, 领, 停车, 兰蔻, 坐, 步行街, 爆米花, 雅诗兰黛, 路过, 薅, 羊毛, 发现, 老字号, 过, 不过, 眼霜, 走, 估计, 小朋友\n",
+      "Topic 5: 体验, 环境, 玩, 楼, 孩子, 生活, 玩具, 发现, 特别, 做, 卖, 北楼, 少, 小时, 小吃, 过, 进, 偶然, 走, 原因\n",
+      "Topic 6: 疫情, 每次, 算是, 不过, 满满的, 穿越, 确实, 希望, 大楼, 值得, 北京市, 这样, 大牌, 商户, 玩具, 地标, 建筑, 位置, 逛街, 期间\n",
+      "Topic 7: 一些, apm, 味道, 衣服, 朋友, 好多, 排队, 有些, 排, 录像厅, 对面, 一楼, 游戏机, 够, 活动, 牌子, 久, 好吃, 卖, 推荐\n",
+      "Topic 8: 不错, 年代, 童年, 怀旧, 品牌, 一些, 喜欢, 转, 餐饮, 去逛, 朋友, 一圈, 菓, 书店, 没想到, 局, 进门, 记忆, 步行街, 周边\n",
+      "Topic 9: 太, 疫情, 局, 菓, 场景, 期间, 有点, 时间, 晚上, 王府井百货, 打卡, 样子, 拍, 想, 果局, 繁华, 好久没, 还原, 人不多, 怀旧\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_3_polarity_N.html\n"
      ]
     }
@@ -751,12 +772,10 @@
      "output_type": "stream",
      "text": [
       "Dictionary<6685 unique tokens: ['一风堂', '不错', '停车', '吃', '商场']...>\n",
-      "Dictionary<996 unique tokens: ['不错', '停车', '吃', '商场', '地下']...>\n",
-      "Topic 0: 疫情, 不, 没, 期间, 热闹, 里, 真的, 几个, 顾客, 喝\n",
-      "Topic 1: 停车, 逛街, 免费, 周末, 小时, 积分, 价格, 会员, 活动, 溜达\n",
-      "Topic 2: 王府井, 东方新天地, 购物, 东单, 北京, 长安街, 餐饮, 新天地, 高端, 交通\n",
-      "Topic 3: 年, 写字楼, 可爱, 东方广场, 一家, 繁华, 楼下, 喷泉, 最, 广场\n",
-      "Topic 4: 商场, 很, 好, 品牌, 东方新天地, 逛, 多, 喜欢, 王府井, 非常\n",
+      "Dictionary<964 unique tokens: ['地铁站', '小厨', '很大', '快乐', '想']...>\n",
+      "Topic 0: 位置, 走, 很大, 交通, 大牌, 高端, 服务, 里, 时尚, 选择, 写字楼, 地铁站, 美食, 步行街, 停车场, 整体, 站, 位于, 便利, 云集\n",
+      "Topic 1: 买, 没, 东西, 拍照, 逛逛, 适合, 真的, 好多, 想, 最, 朋友, 里, 发现, 时间, 逛街, 找, 衣服, 超级, 店铺, 有点\n",
+      "Topic 2: 新天地, 娱乐, 休闲, 年, 小时, 积分, 东方广场, 商业街, 商业, 免费, 会员, 面积, 游客, 主题, 不少, 体验, 中国, 消费, 场所, 人流量\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_4_polarity_P.html\n"
      ]
     }
@@ -785,11 +804,18 @@
      "output_type": "stream",
      "text": [
       "Dictionary<2630 unique tokens: ['一站式', '不便', '东长安街', '享受', '人流']...>\n",
-      "Dictionary<202 unique tokens: ['价格', '停车', '北京', '吃喝玩乐', '白领']...>\n",
-      "Topic 0: 东方新天地, 王府井, 活动, 东单, 逛, 还, 一层, 疫情, 地铁, 很\n",
-      "Topic 1: 说, 不, 积分, 还, 疫情, 没, 保安, 非常, 问, 期间\n",
-      "Topic 2: 地下, 多, 没有, 很, 不, 一层, 品牌, 特别, 开门, 店铺\n",
-      "Topic 3: 没有, 吃, 不是, 还, 逛, 没, 第一次, 找, 很, 地方\n",
+      "Dictionary<172 unique tokens: ['价格', '停车', '吃喝玩乐', '白领', '美食']...>\n",
+      "Topic 0: 带, 东方广场, 商圈, 很久没, 少, 写字楼, 大牌, 旁边, 位于, 商业, 长安街, 交通, 很大, 估计, 前, 做, 顾客, 路口, 不少, 一些\n",
+      "Topic 1: 逛逛, 太, 电影, 排队, 顾客, 喜欢, 价格, 步行街, 吃喝玩乐, 这样, 中午, 选择, 开车, 地理位置, 特别, 美食, 只能, 白领, 整体, 中庭\n",
+      "Topic 2: 保安, 太, 消费, 问, 门, 体验, 买, 人员, 不会, 差, 定位, 客人, 点评, 好, 两个, 有人, 西门, 路过, 不过, 购物\n",
+      "Topic 3: 积分, 过, 服务台, 位置, 站, 点, 购物, 找, 出, 口, 厕所, 好多, 不能, 王府井大街, 号线, 大牌, 很少, 小票, 完, 客人\n",
+      "Topic 4: 停车, 商铺, 停车场, 一圈, 溜达, 新天地, 找, 期间, 小时, 玩, 会员, 有些, 不错, 环境, 车库, 坐地铁, 逛街, 买, 新, 开车\n",
+      "Topic 5: 不错, 一些, 时间, 赶上, 店, 逛一逛, 餐饮, 拍照, 蛮, 第一次, 好久没, 逛街, 美食, 最, 长安街, 特别, 楼上, 样子, 开, 人员\n",
+      "Topic 6: 超市, 朋友, 有个, 特别, 服务, 跑, 休息, 只能, 找, 好多, 更, 整体, 面积, 问, 人员, 不到, 顾客, 新天地, 设施, 商户\n",
+      "Topic 7: 找到, 工作人员, 顾客, 餐饮, 打卡, 新开, 好, 店, 王府井大街, 美食, 更, 购物, 希望, 服务, 点, 商家, 买, 步行街, 位于, 超\n",
+      "Topic 8: 有点, 开门, 早, 中午, 冷清, 这家, 布局, 倒, 一家, 开, 咖啡, 人气, 特别, 上班, 乱, 长安街, 关门, 不过, 消费, 过\n",
+      "Topic 9: 第一次, 春节, 最, 人少, 转, 区, 希望, 店, 费劲, 写字楼, 找到, 餐厅, 好多, 东方, 不过, 购物, 特别, 影响, 商户, 公司\n",
+      "Topic 10: 服务, 垃圾, 广场, 半天, 期间, 晚上, 酒店, 路口, 想, 开, 差, 不到, 工作人员, 进门, 公司, 最, 店, 停车场, 吃喝玩乐, 这家\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_4_polarity_N.html\n"
      ]
     }
@@ -817,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "6a341fb0",
    "metadata": {},
    "outputs": [
@@ -825,9 +851,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal number of topics (using perplexity method): 9\n",
+      "Optimal number of topics (using perplexity method): 11\n",
       "Optimal number of topics (using cosine similarity method): 3\n",
-      "Ultimate optimal number of topics : 6\n"
+      "Ultimate optimal number of topics : 7\n"
      ]
     }
    ],
@@ -854,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "3d702076",
    "metadata": {
     "scrolled": true
@@ -919,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "683f3fab",
    "metadata": {
     "scrolled": false
@@ -931,12 +957,13 @@
      "text": [
       "Dictionary<30619 unique tokens: ['apm', '一圈', '一家', '不错', '云集']...>\n",
       "Dictionary<6900 unique tokens: ['一圈', '一家', '云集', '交通', '人气']...>\n",
-      "Topic 0: 购物, 东单, 餐饮, 停车, 东方广场, 新天地, 位于, 积分, 停车场, 消费, 小时, 顾客, 设施, 会员, 购物中心, 休闲, 商业, 娱乐, 商业街, 区\n",
-      "Topic 1: 东方新天地, 地铁, 吃饭, 店铺, 一些, 大牌, 逛街, 位置, 最, 步行街, 逛逛, 长安街, 不少, 很大, 适合, 朋友, 不过, 高端, 交通, 王府井大街\n",
-      "Topic 2: 时间, 免费, 小时候, 希望, 价格, 点, 打卡, 超市, 卖, 人少, 路过, 发现, 生活, 可爱, 记忆, 展览, 展, 综合性, 主题, 区域\n",
-      "Topic 3: 疫情, 说, 不是, 东西, 走, 想, 太, 过, 带, 找, 期间, 更, 少, 服务, 喷泉, 孩子, 北京市, 第一次, 有些, 晚上\n",
-      "Topic 4: 拍照, ️, 繁华, 有个, 拍, 分, 快, 满满的, 回到, 美食街, 儿时, 依旧, 下班, 中庭, 全国, 鼠年, B, 注册, 还原, 方向\n",
-      "Topic 5: 老, 和平, 年, 新, 做, 写字楼, 回忆, 二层, 中国, 广场, 点评, 前, 菓, 局, 建筑, 电影院, 胡同, 开门, 多年, 营业\n",
+      "Topic 0: 疫情, 东单, 餐饮, 位于, 王府井大街, 积分, 消费, 顾客, 写字楼, 会员, 购物中心, 商业, 商业街, 中国, 北京市, 新, 区, 面积, 原因, 大型\n",
+      "Topic 1: 购物, 地铁, 店铺, 大牌, 走, 位置, 最, 步行街, 长安街, 服务, 很大, 逛逛, 朋友, 交通, 餐厅, 逛街, 美食, 开, 整体, 说\n",
+      "Topic 2: 打卡, 时间, 和平, 拍照, 小时候, 价格, 菓, 路过, 局, 主题, B, 电影院, 可爱, 太, 转, 果局, 展览, 展, 综合性, 区域\n",
+      "Topic 3: 老, 东方广场, 更, 二层, 点, 过, 繁华, 进, 奢侈品, 味道, 多年, 营业, 不用, 人流量, 电梯, 关门, 第一, 历史, 逛商场, 想\n",
+      "Topic 4: 回忆, 记忆, 变化, 样子, 快, 客人, 布置, 扭蛋, 美食街, 儿时, 装饰, 依旧, 柜台, 显得, 很漂亮, 中, 有人, 童年, 鼠年, 发展\n",
+      "Topic 5: 做, 点评, 说, 胡同, 年代, 进门, 拍, 工作人员, 开业, 态度, 好看, 保安, 时代, 扫码, 不好, 随便, 真, 入口, 下班, A\n",
+      "Topic 6: 东方新天地, 停车, 东西, 吃饭, 一些, 不是, 不过, 不少, 新天地, 好多, 适合, 高端, 免费, 周末, 带, 年, 选择, 小时, 衣服, 少\n",
       "Topic assignments saved in: ../data/review/analysis/topics/topic_assignments.csv\n",
       "Visualization saved as: pyLDAvis/lda_visualization_reviews_merged.html\n"
      ]
