--- a/source/Others.ipynb
+++ b/source/Others.ipynb
@@ -60,12 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "id": "4c656b94",
    "metadata": {},
    "outputs": [],
    "source": [
     "import jieba\n",
+    "import json\n",
     "\n",
     "# 加载情感词典\n",
     "with open('sentiment_dic/senti_dic_pro.txt', 'r', encoding='utf-8') as f:\n",
@@ -109,10 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "id": "a357752d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache /var/folders/st/jr2134cd02575p7pnq8xy5440000gn/T/jieba.cache\n",
+      "Loading model cost 0.323 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "id": "71d3993e",
    "metadata": {},
    "outputs": [
@@ -139,21 +150,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['很', '极其', '难过']\n",
-      "-6.0\n"
+      "['很', '难过']\n",
+      "-3.0\n"
      ]
     }
    ],
    "source": [
     "# 测试代码\n",
-    "sen = '很极其难过'\n",
+    "sen = '很难过'\n",
     "score = sentiment_score(sen)\n",
     "print(score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "id": "4daace1f",
    "metadata": {},
    "outputs": [
