--- a/source/Data-Cleaning-02.ipynb
+++ b/source/Data-Cleaning-02.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/stores.csv')"
+    "df = pd.read_csv('../data/original/stores.csv')"
    ]
   },
   {
